--- a/www/test/hallo.html
+++ b/www/test/hallo.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title></title>
 </head>
 <body>
-    Index page
-    <img src="1450461151_Lux.png" />
+HALLO
 </body>
 </html>
