--- a/www/test/index.html
+++ b/www/test/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title></title>
 </head>
 <body>
-    Index page
-    <img src="1450461151_Lux.png" />
+    HOME PAGE
+    <a href="data/extra.html" >GO</a>
+    <a href="old/exta.html">GO OLD</a>
 </body>
 </html>
