--- a/www/test/nosupport.html
+++ b/www/test/nosupport.html
@@ -5,7 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-    Index page
-    <img src="welkom/1450461151_Lux.png" />
+    <img src="data/baum.gif">
 </body>
 </html>
